fixed borders not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 :root {
   --pagePadding: 4vw;
   --bg: white;
+  --element-clr: #2b3743;
+  --text-clr: black;
   
   @media (max-width:800px) {
     --pagePadding: .8rem;
@@ -23,6 +25,7 @@ body {
 
 h1 {
   font-size: 1rem;
+  color: var(--text-clr);
 }
 
 a {
@@ -53,7 +56,7 @@ header {
   border: none;
   font-weight: 600;
   cursor: pointer;
-  color: black;
+  color: var(--text-clr);
 }
 
 svg {
@@ -96,7 +99,7 @@ input:focus-visible {
 
 select {
   font-family: inherit;
-  color: black;
+  color: var(--text-clr);
   font-size: 1rem;
   text-transform: capitalize;
   padding: 0 .5rem;
@@ -186,7 +189,7 @@ section {
   padding: 10px 20px;
   text-decoration: none;
   display: block;
-  color: black;
+  color: var(--text-clr);
 }
 
 .search_result:visited {
@@ -287,7 +290,7 @@ section {
 }
 
 .bordering_country:hover {
-  color: white;
+  color: var(--bg);
   background: #969696;
 }
 
